# mdToDocxTranspiler

./: METHODOLOGY.md  README.md  SKILL.md  pyproject.toml  requirements.txt  transpiler.py
examples/: nir.md  test1_numerical_methods.docx  test1_numerical_methods.md  test2_sorting.docx  test2_sorting.md  test3_dijkstra.docx  test3_dijkstra.md  test4_least_squares.docx  test4_least_squares.md  test5_statistics.docx  test5_statistics.md  test6_sample_vkr.docx  test6_sample_vkr.md
src/: renderer.py  transpiler.py
src/parsing/: tokenizer.py  tokens.py
src/writer/: builder.py  helpers.py
